--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "firebase": "^10.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
+    "sweetalert2": "^11.10.5",
     "use-react-countries": "^2.0.0"
   },
   "devDependencies": {
